# pydanticai-genaihub

./: .gitignore  LICENSE  README.md  bank-agent-example.py  hello-world-anthropic.py  hello-world01.py  pyproject.toml  requirements.txt  sql-generation-example.py  weather-agent-example-anthropic.py  weather-agent-example.py
docs/: aws-bedrock-tool-calling.txt  tool-use-anthropic.txt
examples/: anthropic-model-example.py  openai-model-example copy.py
genai_hub_models/: gah_anthropic.py  gah_openai.py  gah_openaiprovider.py
pydanticai_genai_hub/: __init__.py  openai.py  providers.py
