[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydanticai-genai-hub"
version = "0.1.8"
description = "SAP Generative AI Hub: Pydantic AI models for various LLM providers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gunter", email = "albrechg@yahoo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.17",
    "typing-extensions>=4.0.0",
    "httpx>=0.24.0",
    "generative-ai-hub-sdk>=3.8.0"
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.3.0"]
openai = ["openai>=1.0.0"]
all = [
    "anthropic>=0.3.0",
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/skye0402/pydanticai-genaihub"
Repository = "https://github.com/skye0402/pydanticai-genaihub.git"

[tool.setuptools]
packages = ["pydanticai_genai_hub"]
